# VideoToSMPL

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
.github/: CODE_OF_CONDUCT.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  setup_help.md
.github/workflows/: codeql.yml  deploy-pages.yml  lint.yml  release.yml  test-notebooks.yml
core/: __init__.py  _types.py
core/conversion/: __init__.py  to_smpl_npz.py
core/extraction/: __init__.py  gvhmr_wrapper.py
core/render/: __init__.py  mujoco_renderer.py
core/retargeting/: __init__.py  gmr_wrapper.py
core/sanitize/: __init__.py  _gmr_paths.py  motion_sanitizer.py
core/wbc/: __init__.py
docs/: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LOCAL_SETUP.md  QUICKSTART.md  SECURITY.md  TROUBLESHOOTING.md  WBC_INTEGRATION.md
notebooks/: 01_video_to_smpl.ipynb  02_smpl_to_g1.ipynb  03_full_pipeline.ipynb  04_wbc_simulation.ipynb
scripts/: _gui.py  build_notebooks.py  healthcheck.py  install_local.sh  run_groot_demo.sh  run_local.sh
server/: __init__.py  main.py  pipeline_runner.py  schemas.py  state.py
server/routes/: health.py  jobs.py
web/: .eslintrc.json  README.md  next-env.d.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  not-found.tsx  opengraph-image.tsx  page.tsx  robots.ts  sitemap.ts
web/app/app/: layout.tsx  page.tsx
web/app/demo/: page.tsx
web/app/docs/[slug]/: page.tsx
web/app/playground/: page.tsx
web/components/: Analytics.tsx  CodeBlock.tsx  ColabLauncher.tsx  Footer.tsx  Nav.tsx  ThemeScript.tsx  ThemeToggle.tsx  TroubleshootCard.tsx  VideoCompare.tsx
web/components/pipeline/: ArtifactPanel.tsx  HealthBadge.tsx  OfflineBanner.tsx  StageList.tsx  UploadZone.tsx
web/content/: demos.json  troubleshooting.ts
web/lib/: api.ts  markdown.ts  site.ts  types.ts
