[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-to-smpl-core"
version = "0.1.0"
description = "Core pipeline modules for VideoToSMPL — GVHMR extraction, GMR retargeting, motion sanitization, MuJoCo rendering."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Bhavesh Bakshi" }]
keywords = ["smpl", "gvhmr", "humanoid", "g1", "motion-retargeting", "robotics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Robotics",
]
dependencies = [
    "numpy>=1.24,<3.0",
    "scipy>=1.10",
    "torch>=2.3",
    "mujoco>=3.1",
    "imageio[ffmpeg]>=2.33",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "nbclient>=0.10",
    "nbformat>=5.10",
]
gui = [
    "gradio>=6.0",
    "psutil>=5.9",
]

[project.urls]
Homepage = "https://bhaveshbakshi633.github.io/VideoToSMPL"
Repository = "https://github.com/bhaveshbakshi633/VideoToSMPL"
Issues    = "https://github.com/bhaveshbakshi633/VideoToSMPL/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*"]
exclude = ["web*", "notebooks*", "scripts*", "docs*"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["notebooks/_built", "web", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true
exclude = ["notebooks/_built", "web", "build"]

[tool.pytest.ini_options]
testpaths = ["core", "tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers"
